<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">
    <io.alehub.alehubwallet.view.ToolbarFont
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:navigationIcon="@drawable/ic_back_ic"
        app:title="@string/add_wallet"></io.alehub.alehubwallet.view.ToolbarFont>

    <ScrollView
        android:layout_width="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <io.alehub.alehubwallet.view.TextViewFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:text="@string/select_action"
                android:textColor="@color/text_sub_title"
                android:textSize="14sp"
                app:fontName="museo_700"
                app:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_bg"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
            <io.alehub.alehubwallet.view.ButtonFont
                android:textAllCaps="false"
                android:id="@+id/bt_add_wallet_create_new"
                android:layout_width="match_parent"
                android:text="@string/create_new_wallet"
                android:textColor="@color/text_dark"
                app:buttonFontName="museo_500"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/bt_yellow"/>
            <io.alehub.alehubwallet.view.ButtonFont
                android:textAllCaps="false"
                android:layout_marginTop="12dp"
                android:id="@+id/bt_add_wallet_import"
                android:layout_width="match_parent"
                android:text="@string/import_wallet"
                android:textColor="@color/text_white"
                app:buttonFontName="museo_500"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/bt_dark"/>

            <io.alehub.alehubwallet.view.ButtonFont
                android:textAllCaps="false"
                android:layout_marginTop="12dp"
                android:id="@+id/bt_add_wallet_restore"
                android:layout_width="match_parent"
                android:text="@string/redemption_wallet"
                android:textColor="@color/text_white"
                app:buttonFontName="museo_500"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/bt_dark"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>