<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.alehub.alehubwallet.view.ToolbarFont
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:navigationIcon="@drawable/ic_back_ic"
        app:title="@string/settings"></io.alehub.alehubwallet.view.ToolbarFont>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <io.alehub.alehubwallet.view.TextViewFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:text="@string/general"
                android:textColor="@color/text_sub_title"
                android:textSize="14sp"
                app:fontName="museo_700"
                app:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_bg"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <io.alehub.alehubwallet.view.TextViewFont
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/language"
                    android:textAllCaps="true"
                    android:textColor="@color/text_light"
                    app:fontName="museo_500" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_settings_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner"
                    android:entries="@array/languages"
                    android:tooltipText="@string/email">

                </android.support.v7.widget.AppCompatSpinner>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>