<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <io.alehub.alehubwallet.view.ToolbarFont
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:toolbarBackIcon="@drawable/ic_back_ic"
        app:title="@string/ale"></io.alehub.alehubwallet.view.ToolbarFont>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/form_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin_big"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin_big">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/full_name_cups"
                        android:textColorHint="@color/text_light">

                        <io.alehub.alehubwallet.view.EditTextFont
                            android:id="@+id/ed_registration_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textColor="@color/text_dark"
                            android:textSize="14sp"
                            app:backgroundTint="@color/grey_light"
                            app:editTextFontName="museo_500" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/email_cups"
                        android:textColorHint="@color/text_light">

                        <io.alehub.alehubwallet.view.EditTextFont
                            android:id="@+id/ed_registration_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/text_dark"
                            android:textSize="14sp"
                            app:backgroundTint="@color/grey_light"
                            app:editTextFontName="museo_500" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/phone_number_cups"
                        android:textColorHint="@color/text_light">

                        <io.alehub.alehubwallet.view.EditTextFont
                            android:id="@+id/ed_registration_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:textColor="@color/text_dark"
                            android:textSize="14sp"
                            app:backgroundTint="@color/grey_light"
                            app:editTextFontName="museo_500" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_cups"
                        android:textColorHint="@color/text_light">

                        <io.alehub.alehubwallet.view.EditTextFont
                            android:id="@+id/ed_registration_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/text_dark"
                            android:textSize="14sp"
                            app:backgroundTint="@color/grey_light"
                            app:editTextFontName="museo_500" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_retype_cups"
                        android:textColorHint="@color/text_light">

                        <io.alehub.alehubwallet.view.EditTextFont
                            android:id="@+id/ed_registration_retype_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/text_dark"
                            android:textSize="14sp"
                            app:backgroundTint="@color/grey_light"
                            app:editTextFontName="museo_500" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </ScrollView>

            <io.alehub.alehubwallet.view.ButtonFont
                android:id="@+id/bt_registration_create"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0"
                android:background="@drawable/bt_yellow"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/text_dark"
                android:textSize="16sp"
                app:buttonFontName="museo_500" />

            <io.alehub.alehubwallet.view.TextViewFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_big"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/allredy_have_an_account"
                android:textColor="@color/text_dark"
                android:textSize="14sp"
                app:fontName="museo_500" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:gravity="center"
                android:orientation="horizontal">

                <io.alehub.alehubwallet.view.TextViewFont
                    android:id="@+id/tv_registration_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="@color/text_dark"
                    android:textStyle="bold"
                    app:fontName="museo_700" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <io.alehub.alehubwallet.view.NotificationLayout
        android:id="@+id/notification"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:notificationBg="@color/red"
        app:notificationText="Test"
        app:notificationTextColor="@color/text_dark"></io.alehub.alehubwallet.view.NotificationLayout>

</RelativeLayout>