<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">
    <io.alehub.alehubwallet.view.ToolbarFont
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:navigationIcon="@drawable/ic_back_ic"
        app:title="@string/recovery_phrase"></io.alehub.alehubwallet.view.ToolbarFont>

    <ScrollView
        android:layout_width="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_bg"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
                <io.alehub.alehubwallet.view.TextViewFont
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recovery_phrase_about"
                    android:textColor="@color/text_dark"
                    android:textSize="14sp"
                    app:fontName="museo_300" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chb_recovery_phrase_bout_accept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp" />

                    <io.alehub.alehubwallet.view.TextViewFont
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovery_phrase_about_check"
                        android:textColor="@color/text_dark"
                        android:paddingBottom="10dp"
                        android:textSize="14sp"
                        app:fontName="museo_300" />

                </LinearLayout>


                <io.alehub.alehubwallet.view.ButtonFont
                    android:layout_marginTop="16dp"
                    android:textAllCaps="false"
                    android:id="@+id/bt_recovery_phrase_about_continue"
                    android:layout_width="match_parent"
                    android:text="@string/continue_text"
                    android:textColor="@color/text_dark"
                    app:buttonFontName="museo_500"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@drawable/bt_yellow"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>